@@ -1,37 +1,33 @@
 <?php
 /**
- * P4A - PHP For Applications.
+ * This file is part of P4A - PHP For Applications.
  *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License version 2
- * as published by the Free Software Foundation.
- *
- * This program is distributed in the hope that it will be useful,
+ * P4A is free software: you can redistribute it and/or modify it under
+ * the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * 
+ * P4A is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- *
- * To contact the authors write to:									<br>
- * CreaLabs															<br>
- * Via Medail, 32													<br>
- * 10144 Torino (Italy)												<br>
- * Web:    {@link http://www.crealabs.it}							<br>
+ * GNU Affero General Public License for more details.
+ * 
+ * You should have received a copy of the GNU Affero General Public License
+ * along with Foobar.  If not, see <http://www.gnu.org/licenses/agpl.html>.
+ * 
+ * To contact the authors write to:									<br />
+ * CreaLabs SNC														<br />
+ * Via Medail, 32													<br />
+ * 10144 Torino (Italy)												<br />
+ * Website: {@link http://www.crealabs.it}							<br />
  * E-mail: {@link mailto:info@crealabs.it info@crealabs.it}
  *
- * The latest version of p4a can be obtained from:
- * {@link http://p4a.sourceforge.net}
- *
- * @link http://p4a.sourceforge.net
- * @link http://www.crealabs.it
- * @link mailto:info@crealabs.it info@crealabs.it
- * @copyright CreaLabs
- * @license http://www.gnu.org/licenses/gpl.html GNU General Public License
- * @author Fabrizio Balliano <fabrizio.balliano@crealabs.it>
  * @author Andrea Giardina <andrea.giardina@crealabs.it>
+ * @author Fabrizio Balliano <fabrizio.balliano@crealabs.it>
+ * @copyright CreaLabs SNC
+ * @link http://www.crealabs.it
+ * @link http://p4a.sourceforge.net
+ * @license http://www.gnu.org/licenses/agpl.html GNU Affero General Public License
  * @package p4a
  */
 
