@@ -16,7 +16,7 @@
 </head>
 
 <body class='p4a_browser_<?php echo P4A::singleton()->getBrowser() ?> p4a_popup'>
-<div id='p4a_body'>
+<div id='p4a_body' class='p4a_browser_<?php echo P4A::singleton()->getBrowserOS() ?>'>
 <div id='p4a_loading'><img src='<?php echo P4A_ICONS_PATH?>/loading.gif' alt='' /> Loading... </div>
 <div class='p4a_system_messages'>
 	<?php foreach (P4A::singleton()->getRenderedMessages() as $message): ?>
